<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017. Konstantins Lihacovs
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/colorGray900"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/tv_credentials_rv_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:text="@string/category_name_with_colon"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_credentials_rv_category_image"
        app:layout_constraintRight_toLeftOf="@+id/iv_credentials_rv_edit_category"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_credentials_rv_category_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/category_icon_with_colon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_category_folder_24px"/>

    <ImageView
        android:id="@+id/iv_credentials_rv_edit_category"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/edit_category"
        android:paddingBottom="14dp"
        android:paddingEnd="6dp"
        android:paddingStart="14dp"
        android:paddingTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_credentials_rv_add_credential"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_edit"/>

    <ImageView
        android:id="@+id/iv_credentials_rv_add_credential"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/add_credential"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="4dp"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_add_amber400"/>

</android.support.constraint.ConstraintLayout>