<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017. Konstantins Lihacovs
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_credentialdetails_field_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:hint="@string/field_name_with_colon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_credentialdetails_copy_field">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_credentialdetails_field_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textNoSuggestions"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/iv_credentialdetails_delete_field"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/delete_field"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="0dp"
        android:paddingTop="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"/>

    <ImageView
        android:id="@+id/iv_credentialdetails_copy_field"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/copy_field"
        android:paddingBottom="14dp"
        android:paddingEnd="6dp"
        android:paddingStart="14dp"
        android:paddingTop="14dp"
        app:layout_constraintRight_toLeftOf="@+id/iv_credentialdetails_delete_field"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_content_copy"/>

</android.support.constraint.ConstraintLayout>