<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017. Konstantins Lihacovs
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:tools="http://schemas.android.com/tools"
                                                android:id="@+id/nsv_authentication_login_container"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:paddingBottom="16dp"
                                                android:paddingLeft="16dp"
                                                android:paddingRight="16dp"
                                                android:paddingTop="32dp"
                                                tools:context=".activities.LoginActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_authentication_login_email"
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_authentication_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_with_colon"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_authentication_login_password"
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_authentication_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_with_colon"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acbtn_authentication_login"
                android:theme="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actv_authentication_register_link"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/not_registered"
                android:textSize="16sp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:tools="http://schemas.android.com/tools"
                                                android:id="@+id/nsv_authentication_register_container"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:paddingBottom="16dp"
                                                android:paddingLeft="16dp"
                                                android:paddingRight="16dp"
                                                android:paddingTop="32dp"
                                                tools:context=".activities.LoginActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_authentication_register_email"
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_authentication_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_with_colon"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_authentication_register_password"
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_authentication_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_with_colon"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acbtn_authentication_register"
                android:theme="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actv_authentication_login_link"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/already_registered"
                android:textSize="16sp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>