<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017. Konstantins Lihacovs
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsv_authentication_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_about_app_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_about_app_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_wasp_white"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tc_about_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/iv_about_app_icon"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tc_about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_about_app_data"/>

        <TextView
            android:id="@+id/tc_about_app_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_creator"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tc_about_app_version"/>

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tc_about_app_creator"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_about_functions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator">

            <ImageView
                android:id="@+id/iv_about_beepass"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/emails"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_wasp_white"/>

            <TextView
                android:id="@+id/iv_about_functions_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/about_app_functions"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@+id/iv_about_beepass"
                app:layout_constraintRight_toLeftOf="@+id/iv_about_link_functions"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_about_link_functions"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/email_chooser_title"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_about_send_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_about_functions">

            <ImageView
                android:id="@+id/iv_about_email"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/emails"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_mail_outline"/>

            <TextView
                android:id="@+id/iv_about_email_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/about_have_suggestions"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@+id/iv_about_email"
                app:layout_constraintRight_toLeftOf="@+id/iv_about_send_email"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_about_send_email"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/email_chooser_title"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_about_rate_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_about_send_email">

            <ImageView
                android:id="@+id/iv_about_google"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/emails"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_google_play"/>

            <TextView
                android:id="@+id/iv_about_rate_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/about_enjoyed_app"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@+id/iv_about_google"
                app:layout_constraintRight_toLeftOf="@+id/iv_about_send_rate"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_about_send_rate"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/email_chooser_title"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
